--- a/Example.Rmd
+++ b/Example.Rmd
@@ -9,4 +9,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction 
 
+This is my introduction section where i give a background of my problem question
+
 # Exploratary data analysis
